test/input.cion
var my_global_integer   = 50;
var my_global_fun_call  = bar$(foo, 'c', 50, 0.1234, false, "baz");
var my_global_fun_call2 = baz();
var my_global_number    = 0.1234;
var my_global_boolean   = false;
var my_global_character = 'i';
var my_global_string    = "Hello, World!";

var my_global_custom_01 : uint = 5;
var my_global_custom_02 : bool = 0 + 5 - 10; // error
var my_auto_ref_01 ยง= my_global_custom_01;
var my_auto_ref_01 = my_global_custom_01;
var my_auto_ptr_01 = my_global_custom_02;

function min(lhs : int64, rhs : int64) -> int64 {
	// some stuff
	++i;
	//-- - i ;
}

/*
function testA(a : T, b : V) -> var {}
// auto testA(T a, V b) {}

FUNCTION TESTB(A : T, B : V) -> VAL {}
// CONST AUTO TESTB(T A, V B) {}
*/

function main(paramA : int, paramB : bool) {
	// some stuff
	println("yolo");
	var i = 500;
	i++;
	i = foo <= bar ? 1337 : 42;
	--i++++++;
}

function rec(counter : uint64) -> uint64 {
	return counter <= 100 ? counter : rec(counter - 1);
}

function min(first : int, second : int) -> int {
	return first <= second ? first : second;
}

var my_global_calc_01 = 50 + 15 * 5 - 100 % foo / bar /* lol */ % foo() + baz[i][a, b, c];
var my_condition_01 = (i <= 5) ? bar : baz + 1337;
var paren_func_test = foo(bar(baz(foo(bar()))));

function compound_block_test() {{{ do_nothing(); }}}

var unary_test = -------5;

function if_test() {
	if only_if_branch {
		do_something_funny();
	}
	if no_default_else_branch() {
		lol();
	} else if rofl != mao {
		xD();
	}
	if blablablub() <= loldrafuck {
		return "hello";
	} else if xD || haha {
		return ", ";
	} else if foo && baz {
		return "world!";
	} else {
		return "\n";
	}
}

function closure_test(lol : int, xD : float) {
	function private_func(my_args : int, my_other_args : float) -> int {
		return my_args + my_other_args;
	}
	return private_func(lol, xD);
}

function while_loop_test() {
	while my_condition_func(foo) {
		do_something_within_this_while_loop();
	}
}

function roflcopter() {
	ich_bin() = total_cool();
	habe_ich++;
	var bereits = erwaehnt[x] + dass[x*y] - ich[x*y*z];
	var eigentlich : uint = 50;
	//unglaublich = function(int a, int b) -> int { return 5; };
	return gut_aussehe ? true : false;
}

function recursive_copy_01() {
	dies_ist_ein_scope();
	{
		var hier_kann_ich = true;
		var neue_variablen = anlegen;
		und_sie_werden_automatisch[10] = beim_scope_ende(vom_stack_geloescht[so_dass[10]]);
	}
	var so_dass_ich_sie_hier_nicht = benutzen_kann ? stimmt_so : jo;
}
